tests/purs/failing/DeprecatedFFICommonJSModule.js
"use strict";

exports.yes = true;
exports.no = true;
