tests/purs/failing/DeprecatedFFICommonJSModule.out
Error found:
at tests/purs/failing/DeprecatedFFICommonJSModule.purs:2:1 - 5:29 (line 2, column 1 - line 5, column 29)

  A CommonJS foreign module implementation was provided for module [33mMain[0m:

    tests/purs/failing/DeprecatedFFICommonJSModule.js

  CommonJS foreign modules are no longer supported. Use native JavaScript/ECMAScript module syntax instead.


See https://github.com/purescript/documentation/blob/master/errors/DeprecatedFFICommonJSModule.md for more information,
or to contribute content related to this error.

